Closed Bug 1701891 Opened 3 years ago Closed 3 years ago

Both a taskbar icon and a notify icon disppear when TB window is minimized

Categories

(Thunderbird :: OS Integration, defect)

Unspecified
Windows
defect

Tracking

(thunderbird_esr78 unaffected)

RESOLVED FIXED
89 Branch
Tracking Status
thunderbird_esr78 --- unaffected

People

(Reporter: toshi, Assigned: toshi)

References

Details

Attachments

(1 file)

Following the steps below, both a taskbar icon and a notify icon disappear so that there is no way to bring Thunderbird's window back.

  1. Open Thunderbird and make sure there is no unread emails.
  2. Set mail.minimizetotray to true
  3. Minimize TB's window. (An icon should be displayed in the notification area.)
  4. Click the notification icon. (The icon should disappear.)
  5. Minimize the window again.
  6. No notification icon is added, so there is no way to bring the window back.

Under the following conditions, both a taskbar icon and a notify icondisppear
so that there is no way to bring Thunderbird's window back.

  • No unread email
  • mail.minimizetotray = true

This happens because IconWindowProc deletes the notify icon without updating
the flag nsMessengerWinIntegration::mTrayIconShown. This patch makes sure
that flag is set to false every time we delete the notify icon through
Shell_NotifyIconW. In order for IconWindowProc to access the instance of
nsMessengerWinIntegration, this patch associates the instance pointer with
the window handle.

Status: NEW → ASSIGNED
Target Milestone: --- → 89 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/42990746ade4
Make nsMessengerWinIntegration::mTrayIconShown consistent with the icon's status. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

Comment on attachment 9212443 [details]
Bug 1701891 - Make nsMessengerWinIntegration::mTrayIconShown consistent with the icon's status. r=mkmelin

[Approval Request Comment]
User impact if declined: per bug description
Testing completed (on c-c, etc.): since initial 89 beta
Risk to taking this patch (and alternatives if risky): medium - the code is slightly complicated

Attachment #9212443 - Flags: approval-comm-esr78?

Comment on attachment 9212443 [details]
Bug 1701891 - Make nsMessengerWinIntegration::mTrayIconShown consistent with the icon's status. r=mkmelin

[Triage Comment]
Approved for esr78

Attachment #9212443 - Flags: approval-comm-esr78? → approval-comm-esr78+

Comment on attachment 9212443 [details]
Bug 1701891 - Make nsMessengerWinIntegration::mTrayIconShown consistent with the icon's status. r=mkmelin

This needs rebasing for esr78.

Flags: needinfo?(vseerror)
Flags: needinfo?(mkmelin+mozilla)
Attachment #9212443 - Flags: approval-comm-esr78+

I think this is a regression from bug 715799 and is not applicable to esr78. This might have been a dup of bug 1701429.

Thanks!

Flags: needinfo?(vseerror)
Flags: needinfo?(mkmelin+mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: