Bug 1701891 - Make nsMessengerWinIntegration::mTrayIconShown consistent with the icon's status. r=mkmelin

Under the following conditions, both a taskbar icon and a notify icondisppear
so that there is no way to bring Thunderbird's window back.

- No unread email
- `mail.minimizetotray = true`

This happens because `IconWindowProc` deletes the notify icon without updating
the flag `nsMessengerWinIntegration::mTrayIconShown`.  This patch makes sure
that flag is set to `false` every time we delete the notify icon through
`Shell_NotifyIconW`.  In order for `IconWindowProc` to access the instance of
`nsMessengerWinIntegration`, this patch associates the instance pointer with
the window handle.

Differential Revision: https://phabricator.services.mozilla.com/D110218

--HG--
extra : amend_source : 814bb713606b20240b8a7a21d03ea893bab9a0fe